tests/errors/nativeptr_err/nativeptr_err.c
#error nativeptr_err.nativeptr_err:6:21 Expected a pointer type but was: unit
#error nativeptr_err.nativeptr_err:7:27 Expected a pointer type but was: unativeint
#error nativeptr_err.nativeptr_err:8:20 Expected a pointer type but was: obj
#error nativeptr_err.nativeptr_err:9:25 Expected a pointer type but was: int list
#error nativeptr_err.nativeptr_err:14:24 Expected a pointer type but was: unativeint
#error nativeptr_err.nativeptr_err:15:27 Expected a pointer type but was: unativeint
#error nativeptr_err.nativeptr_err:18:30 Expected two types are different but both was: nativeptr<'T>
#error nativeptr_err.nativeptr_err:22:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:23:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:26:15 Expected nativeptr, __outptr or voidptr type.
#error nativeptr_err.nativeptr_err:28:3 Type mismatch: '__voidinptr' <> 'uint8'.
#error nativeptr_err.nativeptr_err:29:3 Type mismatch: '__voidinptr' <> 'unit'.
#error nativeptr_err.nativeptr_err:33:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:34:15 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:38:9 Expected __inptr, __voidinptr or __outptr type.
#error nativeptr_err.nativeptr_err:47:14 Type mismatch: 'nativeptr<int>' <> 'int'.
#error nativeptr_err.nativeptr_err:48:14 Type mismatch: '__inptr<int>' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:49:14 Type mismatch: 'voidptr' <> 'nativeptr<int>'.
#error nativeptr_err.nativeptr_err:58:11 Expected a variable.
#error nativeptr_err.nativeptr_err:61:11 Expected a variable.
#error nativeptr_err.nativeptr_err:65:22 Expected pointer type.
#error nativeptr_err.nativeptr_err:67:24 Expected pointer type.
#error nativeptr_err.nativeptr_err:73:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:74:20 Expected pointer type.
#error nativeptr_err.nativeptr_err:75:25 Expected nativeptr but was __outptr.
#error nativeptr_err.nativeptr_err:80:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:81:15 This function misses some argument.
#error nativeptr_err.nativeptr_err:82:26 Expected nativeptr but was __inptr.
